# teamwork-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic.py
scripts/: run_test.sh
teamwork/: __init__.py  defs.py
teamwork/_async/: client.py  messaging.py  user.py
tests/: conftest.py  test_messaging.py  test_user.py
