[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamwork-python"
keywords = ["teamwork", "bot-framework", "sdk"]
authors = [{ name = "Danny Kok", email = "dannykok1@gmail.com" }]
version = "0.1.0"
description = "The python bot-framework SDK for Teamwork (https://teamwork.app)"
readme = "README.md"
dependencies = ["aiohttp >= 3.10.10", "pydantic >= 2.9.2"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://teamwork.app"
Repository = "https://github.com/dannykok/teamwork-python"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
